tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/ap-northeast-2/ec2-describe-internet-gateways.json
{
    "InternetGateways": [
        {
            "Attachments": [
                {
                    "State": "available",
                    "VpcId": "vpc-9be436f0"
                }
            ],
            "InternetGatewayId": "igw-605fde08",
            "OwnerId": "167389268608",
            "Tags": []
        }
    ]
}
