tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/ap-northeast-2/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-798eb114",
                    "NetworkAclId": "acl-0d921d66",
                    "SubnetId": "subnet-5b17ae20"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-788eb115",
                    "NetworkAclId": "acl-0d921d66",
                    "SubnetId": "subnet-b2bb8bfe"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-7e8eb113",
                    "NetworkAclId": "acl-0d921d66",
                    "SubnetId": "subnet-cf5894a4"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-1e66fe72",
                    "NetworkAclId": "acl-0d921d66",
                    "SubnetId": "subnet-218fba7d"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-0d921d66",
            "OwnerId": "167389268608",
            "Tags": [],
            "VpcId": "vpc-9be436f0"
        }
    ]
}
