tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/ap-northeast-2/ec2-describe-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-1956f073",
                    "RouteTableId": "rtb-aaa13ac1"
                }
            ],
            "OwnerId": "167389268608",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-aaa13ac1",
            "Routes": [
                {
                    "DestinationCidrBlock": "6.168.104.159/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "172.227.123.61/0",
                    "GatewayId": "igw-605fde08",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-9be436f0"
        }
    ]
}
